
* Parsing from a plain file object frees the GIL under Python 2.x.

* Running ``iterparse()`` on a plain file (or filename) frees the GIL
  on reading under Python 2.x.

* Conversion functions ``html_to_xhtml()`` and ``xhtml_to_html()`` in
  lxml.html (experimental).

* Most features in lxml.html work for XHTML namespaced tag names
  (experimental).

Bugs fixed
----------

* A number of problems related to unicode/byte string conversion of
  filenames and error messages were fixed.

* Building on MacOS-X now passes the "flat_namespace" option to the C
  compiler, which reportedly prevents build quirks and crashes on this
  platform.

* Windows build was broken.

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* Up to several times faster attribute access (i.e. tree traversal) in
  lxml.objectify.


2.0.6 (2008-05-31)
==================

Features added
--------------

Bugs fixed
----------

* Incorrect evaluation of ``el.find("tag[child]")``.

* Windows build was broken.

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* lxml should now build without problems on MacOS-X.


2.1beta2 (2008-05-02)
=====================

Features added
--------------

* All parse functions in lxml.html take a ``parser`` keyword argument.

* lxml.html has a new parser class ``XHTMLParser`` and a module
  attribute ``xhtml_parser`` that provide XML parsers that are
  pre-configured for the lxml.html package.

Bugs fixed
----------

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Passing an nsmap when creating an Element will no longer strip